Fix logo styling on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,6 +102,10 @@ footer img {
         font-size: 0.7rem;
     }
 
+    header .logo {
+        width: 100%;
+    }
+
     header .logo h2 {
         font-size: 1.2rem;
     }
